--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,29 @@
     background-color: rgb( 69 69 69);
     color: #FFF;
     vertical-align: top;
+    text-align: center;
     border: 1px solid green;
+    font-family: 'Times New Roman', Times, serif; /* needs fixing */
 }
+
 #container {
     display: grid;
-    padding: 0.125em;
+    grid-template-columns: repeat(3,1fr);
+    /* grid-template-rows: ; */
+    /* row-gap: 1em;
+    column-gap: 1em; */
+    grid-gap: 1em;
+    align-items: center;
+    padding: 0.25em;
+    /* height: 100vh; 100% of the view height */
+}
+
+#header_row{
+    /* grid-column-start: 1; 
+    grid-column-end: -1; end of the column */
+    grid-column: 1 / -1; /* short hand for above code */
+}
+
+input[type="text"]{
+    background-color: black;
 }
