--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     vertical-align: top;
     text-align: center;
     border: 1px solid green;
-    font-family: 'Times New Roman', Times, serif; /* needs fixing */
+    font-family: 'Monospace', 'Georgia', 'serif', ; /* needs fixing */
 }
 
 #container {
